[gd_scene load_steps=18 format=3 uid="uid://b73gh8gml20w4"]

[ext_resource type="Script" path="res://src/playable_scenes/world.gd" id="1_ptqmb"]
[ext_resource type="PackedScene" uid="uid://b7e5e8c5xjdqt" path="res://spawn_point.backup.tscn" id="2_r822a"]
[ext_resource type="Resource" uid="uid://d0bfg0v2ww0wd" path="res://src/entities/vessels/player/player_vessel.tres" id="3_m73ji"]
[ext_resource type="Resource" uid="uid://cvaa382luqrdd" path="res://src/entities/vessels/dude_vessel/dude_vessel.tres" id="4_arjsp"]
[ext_resource type="Resource" uid="uid://dg2wenmhvuq81" path="res://src/entities/vessels/spammer_vessel/spammer_vessel.tres" id="5_410k0"]
[ext_resource type="Resource" uid="uid://cyfysp6i28o24" path="res://src/entities/vessels/big_vessel/big_vessel.tres" id="6_4k3bq"]
[ext_resource type="Script" path="res://src/world_fence.gd" id="6_c4s03"]
[ext_resource type="PackedScene" uid="uid://qj4tjkxgrqgy" path="res://src/spawners/spawn_area.tscn" id="7_pk8ft"]
[ext_resource type="PackedScene" uid="uid://dio30b7vxsafs" path="res://src/spawners/spawn_group.tscn" id="8_bffvs"]
[ext_resource type="Material" uid="uid://twgo1jbjoj4u" path="res://src/shadering/materials/color_palette.tres" id="10_08syi"]
[ext_resource type="Texture2D" uid="uid://b8njfng6gaoa" path="res://assets/sprites/popups/alert_arrow.png" id="11_oracx"]
[ext_resource type="Texture2D" uid="uid://4wvolox16e55" path="res://assets/sprites/color_test.png" id="12_jvcf2"]

[sub_resource type="Animation" id="Animation_el2on"]
resource_name = "test_level"
length = 10.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spawners/Dude")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn"
}, {
"args": [],
"method": &"spawn"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spawners/Spammer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spawners/Big")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spawners/Dummy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.6, 2.6, 3.5, 5.2, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"spawn"
}, {
"args": [],
"method": &"spawn"
}, {
"args": [],
"method": &"spawn"
}, {
"args": [],
"method": &"spawn"
}, {
"args": [],
"method": &"spawn"
}, {
"args": [],
"method": &"spawn"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0p843"]
_data = {
"test_level": SubResource("Animation_el2on")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_matw0"]
size = Vector2(56, 920)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2702"]
size = Vector2(920, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3rxe"]
size = Vector2(2718, 56)

[node name="World" type="Node2D"]
script = ExtResource("1_ptqmb")

[node name="Bullets" type="Node2D" parent="."]

[node name="Vessels" type="Node2D" parent="."]

[node name="Spawners" type="Node2D" parent="."]

[node name="Player" parent="Spawners" instance=ExtResource("2_r822a")]
position = Vector2(200, 384)
entity_info = ExtResource("3_m73ji")

[node name="Dude" parent="Spawners" instance=ExtResource("2_r822a")]
position = Vector2(1639, 91)
entity_info = ExtResource("4_arjsp")

[node name="Spammer" parent="Spawners" instance=ExtResource("2_r822a")]
position = Vector2(1642, 504)
entity_info = ExtResource("5_410k0")

[node name="Big" parent="Spawners" instance=ExtResource("2_r822a")]
position = Vector2(1641, 686)
entity_info = ExtResource("6_4k3bq")

[node name="Dummy" parent="Spawners" instance=ExtResource("8_bffvs")]
position = Vector2(1743, 400)

[node name="UpArea" parent="Spawners/Dummy" instance=ExtResource("7_pk8ft")]
position = Vector2(-104, -162)
area = Vector2i(1, 150)
entity_info = ExtResource("4_arjsp")
weight_coef = 0.01

[node name="DownPoint" parent="Spawners/Dummy" instance=ExtResource("2_r822a")]
position = Vector2(-100, 200)
entity_info = ExtResource("4_arjsp")

[node name="StatitcBodies" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0p843")
}

[node name="WorldFence" type="Node2D" parent="."]
script = ExtResource("6_c4s03")
margin = 20
width = 56
enemy_margin = 600

[node name="LeftPlayer" type="StaticBody2D" parent="WorldFence"]
position = Vector2(-48, 384)
collision_layer = 256
collision_mask = 0

[node name="VerticalShape" type="CollisionShape2D" parent="WorldFence/LeftPlayer"]
shape = SubResource("RectangleShape2D_matw0")

[node name="RightEnemy" type="StaticBody2D" parent="WorldFence"]
position = Vector2(2014, 384)
collision_layer = 512
collision_mask = 0

[node name="VerticalShape" type="CollisionShape2D" parent="WorldFence/RightEnemy"]
shape = SubResource("RectangleShape2D_matw0")

[node name="RightOneWay" type="StaticBody2D" parent="WorldFence"]
position = Vector2(1414, 384)
collision_layer = 768
collision_mask = 0

[node name="VerticalShape" type="CollisionShape2D" parent="WorldFence/RightOneWay"]
rotation = 4.71239
shape = SubResource("RectangleShape2D_i2702")
one_way_collision = true
debug_color = Color(0.65098, 0.517647, 0, 0.419608)

[node name="Up" type="StaticBody2D" parent="WorldFence"]
position = Vector2(683, -48)
collision_layer = 768
collision_mask = 0

[node name="HorizontalShape" type="CollisionShape2D" parent="WorldFence/Up"]
shape = SubResource("RectangleShape2D_l3rxe")

[node name="Down" type="StaticBody2D" parent="WorldFence"]
position = Vector2(683, 816)
collision_layer = 768
collision_mask = 0

[node name="HorizontalShape" type="CollisionShape2D" parent="WorldFence/Down"]
shape = SubResource("RectangleShape2D_l3rxe")

[node name="AlertArrow" type="Sprite2D" parent="."]
material = ExtResource("10_08syi")
position = Vector2(1097, 655)
texture = ExtResource("11_oracx")

[node name="ColorTest" type="Sprite2D" parent="."]
material = ExtResource("10_08syi")
position = Vector2(1164, 655)
texture = ExtResource("12_jvcf2")

[node name="AlertArrow2" type="Sprite2D" parent="."]
position = Vector2(1097, 594)
texture = ExtResource("11_oracx")

[node name="ColorTest2" type="Sprite2D" parent="."]
position = Vector2(1164, 594)
texture = ExtResource("12_jvcf2")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
